src/components/PastWorkoutsItem/PastWorkoutsItem.scss
@import '../../helpers.scss';

.past-workouts-item {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: $secondary-background;
  border-radius: $border-radius;
  height: fit-content;
  padding: 1rem 0.785rem;

  .head {
    display: flex;
    cursor: pointer;
    width: 100%;
  }

  .image {
    display: flex;
    align-items: center;
    justify-content: center;
    align-items: center;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    padding: 0.25rem;
    box-sizing: border-box;
    background: $primary-background;
    margin: auto 0;
    img {
      object-fit: contain;
      height: 35px;
      width: 35px;
    }
  }
  .workout-data {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-left: 1rem;

    .top {
      .name {
        font-size: 1rem;
        font-weight: 700;
      }
    }
    .bottom {
      display: flex;
      flex-direction: column;
      .workout-time {
        font-size: 1rem !important;
      }
    }
  }
  .date {
    display: flex;
    align-items: flex-end;
    gap: 0.35rem;
    color: $secondary-text;
    font-size: 0.8rem;
  }
  .collapse-indicator {
    display: flex;
    align-items: flex-end;
    color: $secondary-text;
    padding-left: 0.25rem;

    .icon {
      height: 20px;
      width: 20px;
    }
  }

  .collapse {
    width: 100%;
    box-sizing: border-box;
    overflow: hidden;
    max-height: 0;
    background: $secondary-background;
    padding: 1rem;
    transition: 0.1s max-height linear;
    padding: 0;
  }
  .collapse.show {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: fit-content;
    max-height: 500px;

    .workout-data {
      border-top: 1px solid $tertiary-text;
      width: 95%;
      display: grid;

      margin: 0;
      margin-top: 1rem;
      padding: 1rem 0;
      row-gap: 1.5rem;
      column-gap: 0.5rem;
      grid-template-columns: 1fr 1fr;
      .item {
        display: flex;
        flex-direction: column;
        gap: 0.5rem;
        .label {
          color: $secondary-text;
          font-size: 0.8rem;
          font-weight: 500;
        }
        .data {
          font-size: 1.3rem;
          font-weight: 600;
        }
        .coins,
        .exp {
          display: flex;
          align-items: center;

          .icon {
            padding: 0 0.15rem;
          }
        }
        .coins {
          color: $coin-color;
        }
        .exp {
          color: $exp-color;
        }
      }
      .start-finish-time {
        grid-column: 1/3;
      }
      .workout-path {
        grid-column: 1/3;

        .data {
          display: flex;
          flex-direction: column;
          gap: 0.75rem;
          .workout-path-exercise {
            display: flex;
            gap: 1rem;
            background: $secondary-background-card;
            border-radius: $border-radius;
            padding: 0.5rem;
            .image {
              background: none;
            }
            .exercise-data {
              display: flex;
              flex-direction: column;
              justify-content: space-around;

              .name {
                font-size: 1rem;
                font-weight: 600;
                text-transform: capitalize;
              }
              .reps-sets {
                display: flex;
                gap: 1rem;
                font-size: 0.8rem;
                color: $secondary-text;
                span {
                  color: $primary;
                }
              }
            }
          }
        }
      }
    }
  }

  .character-data {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 0.15rem;
    div {
      display: flex;
      justify-content: flex-end;
      align-items: center;
      font-size: 0.9rem;

      .icon {
        padding: 0 0.15rem;
      }
    }
    .coins {
      color: $coin-color;
    }
    .exp {
      color: $exp-color;
    }
  }
}

